<resources>
    <string name="app_name">Healthy Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="dWeight">Desirable weight</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="neckCF">Physical Activity</string>
    <string name="waistLine">Waist line</string>
    <string name="loinsCF">Loins Circumference</string>
    <string name="fatPers">Fat percentage</string>
    <string name="musclesPers">Muscles percentage</string>
    <string name="waterPers">Water percentage</string>
    <string name="start">Start</string>
    <string name="title_activity_day_schedule">Day Schedule</string>
    <string name="title_activity_food">Meal</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="hello_world">Hello world!</string>
    <string name="calories">Calories</string>
    <string name="caloriesTab">Calories</string>
    <string name="weightTab">Weight</string>
    <string name="waterTab">Water</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_weight">Weight</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="app_info">This is your daily schedule! Do not forget to input information that it can customize to you.</string>
    <string name="activity_info">Too small - passive lifestyle.\nSmall - light exercise 1-3 times per week.\nMiddle - middle exercise 3-6 times per week.\nBig - hard exercise 6-7 times per week.\nToo big - so hard exercise two times per day or hard physical work.</string>
</resources>
