<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_data_input_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.health.darynaosipenko.healthyschedule.login.DataInput">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:minHeight="?android:attr/listPreferredItemHeight">

                <ImageView
                    android:id="@+id/iv_height_label"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_height" />

                <EditText
                    android:id="@+id/heightET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@+id/iv_height_label"
                    android:hint="@string/height"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:minHeight="?android:attr/listPreferredItemHeight">

                <ImageView
                    android:id="@+id/iv_weight_label"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_weight" />

                <EditText
                    android:id="@+id/weightET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@+id/iv_weight_label"
                    android:hint="@string/weight"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:minHeight="?android:attr/listPreferredItemHeight">

                <ImageView
                    android:id="@+id/iv_age_label"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_age" />

                <EditText
                    android:id="@+id/ageET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@+id/iv_age_label"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:minHeight="?android:attr/listPreferredItemHeight">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/female" />
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:minHeight="?android:attr/listPreferredItemHeight">

                <ImageView
                    android:id="@+id/iv_neckCF_label"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_sport" />

                <Spinner
                    android:id="@+id/spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:layout_toLeftOf="@+id/info"
                    android:layout_toRightOf="@+id/iv_neckCF_label" />

                <ImageView
                    android:onClick="onInfoClicked"
                    android:id="@+id/info"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:src="@mipmap/ic_info" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
